syntax = "proto3";

import "region/cell.proto";

package hs.proto.region;

message Surface {
  repeated Cell cells = 1;
  int32 q_start = 2;
  int32 q_end = 3;
  int32 r_start = 4;
  int32 r_end = 5;
  int32 s_start = 6;
  int32 s_end = 7;
}

message Region {
  string id = 1; // region_id
  Surface surface = 2;

  string city_id = 3; // optional, empty string if no city
}
